# ActorForth

./: .gitignore  .gitmodules  ActorForth.sublime-workspace  CHANGELOG.md  CLAUDE.md  LICENSE.txt  Makefile  README.md  TODO.md  af_import_rel_test_514.a4  build-a4.sh  commercial.md  interpret  rebar.config  requirements.txt  run_tests.sh  runtests  source_python_path
config/: vm.args
cpp/: build  build_setup  meson.build
cpp/include/: continuation.hpp  operation.hpp  parser.hpp  repl.hpp  stack.hpp  stack_sig.hpp  type.hpp  type_attribute.hpp
cpp/include/types/: any.hpp  compiler.hpp  int.hpp
cpp/src/: meson.build  operation.cpp  parse.cpp  parser.cpp  repl.cpp  stack.cpp  stack_sig.cpp  type.cpp
cpp/src/types/: any.cpp  compiler.cpp  int.cpp
cpp/tests/: test_cin.cpp  test_operation.cpp  test_parser.cpp  test_stack.cpp  test_type.cpp  test_typing.cpp
cpp/tests/data/: parseme.a4
docs/: ActorForth.odt  ActorForthDefinition.md  IMPLEMENTATION_PLAN.md  IntroToActorForth.md  PythonIntegration.md  StateOfTheBlockChain.docx  StateOfTheBlockChain.odt  WhyActorForth.odp  architectural-drivers-considerations.md  encoding.md  pdf-header.tex
editor/: EDITOR_SUPPORT_PLAN.md
include/: af_error.hrl  af_type.hrl  continuation.hrl  operation.hrl  token.hrl
lib/: btc.a4  btc2-io.a4  btc2-stack.a4  btc2.a4  one2four.a4
obsolete/: README.md  af_hos_check.erl  af_hos_dsl.erl  af_hos_runtime.erl
priv/: stdlib.a4
samples/: access_token.a4  actor.test.a4  autobind_demo.test.a4  bank_actor.a4  bridge_counter.a4  countdown.a4  counter_actor.a4  ffi_demo.a4  fib.a4  (+15 more)
(+401 files in other folders)
